# infinity-context

./: .gitignore  AUTO_TRIGGER_CONFIG.md  CHALLENGE_LETTER.md  CLEANUP_REPORT.md  CONTRIBUTING.md  DISCORD_ANNOUNCEMENT.md  DISCORD_ANNOUNCEMENT_WITH_PHILOSOPHY.md  DISCORD_PROMO_FINAL.md  ENGINEERING_IMPROVEMENTS.md  GITHUB_RELEASE_v0.3.0.md  GITHUB_RELEASE_v1.0.0.md  GITHUB_RELEASE_v1.0.0_FINAL.md  HERMES_AUTO_TRIGGER.md  LICENSE  MISSION.md  README.md  README_SIMPLE.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v1.0.0_FIXED.md  RELEASE_v1.0.0.md  RELEASE_v1.1.0.md  REMOTE_CLEANUP_REPORT.md  RESPONSE_BATTLE_REPORT.md  RESPONSE_TO_CRITICISM.md  SETUP_COMPLETE.md  TEST_REPORT_v1.0.0.md  USER_GUIDE_FOR_EVERYONE.md  api_server_example.py  deploy.sh  deploy_simple.sh  fully_auto_rotator.py  pyproject.toml  requirements.txt  run_tests.sh  session_rotator.sh  session_rotator_simple.sh  status.sh  test_switch.sh
docs/: CLEANUP_SUMMARY.md  LLM_SUMMARIZER_GUIDE.md  MODEL_SUPPORT.md  PHILOSOPHY.md  QUICKSTART.md  WHY_64K.md
examples/: config.example.md
scripts/: auto_rotate.py  copy_conversation.py  quick_summarize.py
src/: __init__.py  cli.py  context_monitor.py  llm_summarizer.py  session_rotator.py  smart_summarizer.py  token_counter.py
tests/: 6HOUR_TEST_PLAN.md  CORE_FEATURES_TEST_REPORT.md  QUICK_REFERENCE.md  TEST_REPORT.md  test_6hour_monitor.py  test_basic.py  test_core_features.py  test_hermes_native.py  test_integration.py  test_llm_summarizer.py  test_monitor.py  test_real_features.py  test_real_scenario.py  test_right_now.py  test_small_models.py  (+1 more)
(+1 files in other folders)
